<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/item_activity_second_prezime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/item_activity_second_ime"
        android:layout_below="@+id/item_activity_second_ime"
        android:hint="@string/activitiy_main_prezime"
        android:text="TextView" />

    <TextView
        android:id="@+id/item_activity_second_adresa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/item_activity_second_prezime"
        android:layout_below="@+id/item_activity_second_prezime"
        android:hint="@string/activity_main_adresa"
        android:text="TextView" />

    <TextView
        android:id="@+id/item_activity_second_ime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:hint="@string/activity_main_ime"
        android:text="TextView" />

</RelativeLayout>
